--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,6 +1,33 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+body {
+  overflow-x: hidden;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+}
+#terminal {
+  height: 50vh;
+  position: relative;
+}
+#row-content {
+  width: 90vw;
+  position: relative;
+  left: 5%;
+}
+h1 {
+  margin: 0 0 0.5rem 0;
+  font-size: 2.5rem;
+}
+.App-header {
+  align-items: center;
+  background-color: #f6f6f6;
+  border-bottom: 1px solid #ddd;
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 20px;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
 }
